err/bups.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bups'...
Listing './lib/python3.5/site-packages/bups/config'...
Compiling './lib/python3.5/site-packages/bups/gtk.py'...
***   File "./lib/python3.5/site-packages/bups/gtk.py", line 131
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bups/manager.py'...
***   File "./lib/python3.5/site-packages/bups/manager.py", line 84
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bups/scheduler'...
Compiling './lib/python3.5/site-packages/bups/scheduler/systemd.py'...
***   File "./lib/python3.5/site-packages/bups/scheduler/systemd.py", line 34
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bups/worker'...
Compiling './lib/python3.5/site-packages/bups/worker/index.py'...
***   File "./lib/python3.5/site-packages/bups/worker/index.py", line 69
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bups/worker/save.py'...
***   File "./lib/python3.5/site-packages/bups/worker/save.py", line 67
    except client.ClientError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
